# depys1

./: LICENSE  pyproject.toml
.github/workflows/: github-actions.yml
depys/: __init__.py  _impl.py
tests/: test_depys.py
