[tool.poetry]
name = "depys"
version = "0.1.0"
description = "Data-driven runtime dependency management for Python."
authors = ["Wes Payne <noblepayne@noblepayne.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
anyio = "^3.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
